[package]
name = "show-me-the-code"
version = "0.1.0"
authors = ["intellild <jinzhixin@youzan.com>"]
edition = "2018"

[dependencies]
actix = "^0.7"
actix-web = "^0.7"
env_logger = "*"
dotenv = "*"
futures = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.6", features = ["serde"] }
